--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,14 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <%= link_to "ArriendoLibre 🤑", root_path, class:"navbar-brand" %>
+    <%= link_to "ArriendoLibre 🤝", root_path, class:"navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-        <%= link_to "Productos", productos_path, class:"nav-link" %>  
-        </li>
+        <% if usuario_signed_in? %>
+          <% if current_usuario.role == "moderador" %>
+            <li class="nav-item">
+            <%= link_to "Moderar Productos", productos_path, class:"nav-link" %>  
+            </li>
+          <% else %>
+            <%= link_to "Productos", productos_path, class:"nav-link" %> 
+          <% end %>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Productos", productos_path, class:"nav-link" %>  
+            </li>
+        <% end %>
         <% if usuario_signed_in? %>
           <% if current_usuario.role == "moderador" %>
             <li class="nav-item">
@@ -57,6 +67,10 @@
           </ul> %>
         </li>
       </ul>
+      
+      <% if @carro_actual.carro_items.length() != 0%>
+        <%= link_to "Regresar a la reserva 🛒", carro_path(@carro_actual), class:"nav-link text-light"%>
+      <% end %>
     </div>
   </div>
 </nav>
