--- a/app/views/usuarios/mailer/email_changed.html.erb
+++ b/app/views/usuarios/mailer/email_changed.html.erb
@@ -1,4 +1,4 @@
-<p>Hello <%= @email %>!</p>
+<p>Hola <%= @email %>!</p>
 
 <% if @resource.try(:unconfirmed_email?) %>
   <p>Estamos contactándote para informarte que tu email está siendo cambiado a <%= @resource.unconfirmed_email %>.</p>
