--- a/app/assets/stylesheets/public/productos.scss
+++ b/app/assets/stylesheets/public/productos.scss
@@ -1,3 +1,48 @@
-// Place all the styles related to the productos controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+
+body {
+    background-color: rgba(240, 240, 240, 0.8);
+    }
+
+.container-sm{
+    width: 100%;
+    max-width: 1200px;
+    height: 430px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+}
+
+.container-sm .card{
+    background-color: #fff;
+    width: 330px;
+    height: 500px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+}
+
+.container-sm .card:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.container-sm .card img{
+    width: 330px;
+    height: 220px;
+}
+
+.container-sm .card p{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.container-sm .card a {
+    font-weight: 500;
+    text-decoration: none;
+    color: #fff;
+}
