--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,17 @@
-<h2>Sign up</h2>
+<h2>Crear cuenta</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+  <div class="field">
+    <%= f.label :nombre %><br />
+    <%= f.text_field :nombre %>
+  </div>
+
+  <div class="field form-group">
+    <%= f.label :imagen %>
+    <%= f.file_field :imagen, class:"form-control"  %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -9,20 +19,25 @@
   </div>
 
   <div class="field">
+    <%= f.label :telefono %><br />
+    <%= f.text_field :telefono %>
+  </div>
+
+  <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> caracteres mínimos)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "nueva-contraseña" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" , data: {turbo: false} %>
+    <%= f.submit "Registrarse" , data: {turbo: false} %>
   </div>
 <% end %>
 
