--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,44 +3,130 @@
 <% if usuario_signed_in? %>
     <div class="mt-4 p-5 bg-dark text-white rounded">
     <br/>
-    <h1>Bienvenido <%= current_usuario.role %> <%= current_usuario.nombre %> a ArriendoLibre 🤑</h1>
+    <h1>Bienvenido <%= current_usuario.role %> <%= current_usuario.nombre %> a ArriendoLibre 🤝</h1>
     <br/>
-    <p>La mejor tienda para arrendar tus productos deportivos !</p>
+    <p>La mejor tienda para arrendar tus productos deportivos ! ⚽</p>
     </div>
     <br/>
     <br/>
-    <% if current_usuario.role == "moderador" %>
-        <h2>Usuarios:</h2>
-        <br/>
-        <table class="table table-striped table-bordered table-hover">
-            <thead class="thead-dark">
-                <tr>
-                <th>Nombre</th>
-                <th>Email</th>
-                <th>Teléfono</th>
-                <th colspan="3"></th>
-                </tr>
-            </thead>
 
-            <tbody>
-                <% Usuario.all.each do |usuario| %>
-                    <% if usuario != current_usuario %>
-                        <tr>
-                            <td><%= usuario.nombre %></td>
-                            <td><%= usuario.email %></td>
-                            <td><%= usuario.telefono %></td>
-                        </tr>
-                    <% end %>
+<% if current_usuario.role == "moderador" %>
+    <br/>
+    <br/>
+    <h2>Usuarios</h2>
+    <br/>
+    <table class="table table-striped table-bordered table-hover">
+        <thead class="thead-dark">
+            <tr>
+            <th>Nombre</th>
+            <th>Email</th>
+            <th>Teléfono</th>
+            <th colspan="3"></th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <% Usuario.all.each do |usuario| %>
+                <% if usuario != current_usuario %>
+                    <tr>
+                        <td><%= usuario.nombre %></td>
+                        <td><%= usuario.email %></td>
+                        <td><%= usuario.telefono %></td>
+                    </tr>
                 <% end %>
-            </tbody>
-        </table>
+            <% end %>
+        </tbody>
+    </table>
     <% end %>
 <% else %>
     <div class="mt-4 p-5 bg-dark text-white rounded">
-    <h2>Bienvenido a ArriendoLibre 🤑, Inicia sesión! </h2>
-    <p>La mejor tienda para arrendar tus productos deportivos !</p>
+    <h2>Bienvenido a ArriendoLibre 🤝, Inicia sesión! </h2>
+    <p>La mejor tienda para arrendar tus productos deportivos ! ⚽</p>
     </div>
 <% end %>
+
+<br/>
+<h2>Clima Actual ☀️</h2>
+<br/>
+<table class="table table-striped table-bordered table-hover">
+  <thead class="thead-dark">
+    <tr>
+      <th>Ciudad</th>
+      <th>Temperatura (°F)</th>
+      <th>Humedad</th>
+      <th>Dirección del viento (°)</th>
+    </tr>
+  </thead>
+
+  <tbody>
+      <tr>
+        <% @datos1 = HTTParty.get "https://visual-crossing-weather.p.rapidapi.com/forecast?aggregateHours=24&location=Santiago%2CChile&contentType=json&unitGroup=us&shortColumnNames=0",
+        headers:{
+        "X-RapidAPI-Key" => '4e7b68c07amsh5bcab0e32768832p172629jsn875f54b8e1dc',
+        "X-RapidAPI-Host" => 'visual-crossing-weather.p.rapidapi.com'
+        } %>
+        <td><%= @datos1['locations']['Santiago,Chile']['address'] %></td>
+        <td><%= @datos1['locations']['Santiago,Chile']['currentConditions']['temp'] %></td>
+        <td><%= @datos1['locations']['Santiago,Chile']['currentConditions']['humidity'] %></td>
+        <td><%= @datos1['locations']['Santiago,Chile']['currentConditions']['wdir'] %></td>
+      </tr>
+      <tr>
+        <% @datos2 = HTTParty.get "https://visual-crossing-weather.p.rapidapi.com/forecast?aggregateHours=24&location=Arica%2CChile&contentType=json&unitGroup=us&shortColumnNames=0",
+        headers:{
+        "X-RapidAPI-Key" => '4e7b68c07amsh5bcab0e32768832p172629jsn875f54b8e1dc',
+        "X-RapidAPI-Host" => 'visual-crossing-weather.p.rapidapi.com'
+        } %>
+        <td><%= @datos2['locations']['Arica,Chile']['address'] %></td>
+        <td><%= @datos2['locations']['Arica,Chile']['currentConditions']['temp'] %></td>
+        <td><%= @datos2['locations']['Arica,Chile']['currentConditions']['humidity'] %></td>
+        <td><%= @datos2['locations']['Arica,Chile']['currentConditions']['wdir'] %></td>
+      </tr>
+      <tr>
+        <% @datos3 = HTTParty.get "https://visual-crossing-weather.p.rapidapi.com/forecast?aggregateHours=24&location=Vi%C3%B1adelMar%2CChile&contentType=json&unitGroup=us&shortColumnNames=0",
+        headers:{
+        "X-RapidAPI-Key" => '4e7b68c07amsh5bcab0e32768832p172629jsn875f54b8e1dc',
+        "X-RapidAPI-Host" => 'visual-crossing-weather.p.rapidapi.com'
+        } %>
+        <td><%= @datos3['locations']['ViñadelMar,Chile']['address'] %></td>
+        <td><%= @datos3['locations']['ViñadelMar,Chile']['currentConditions']['temp'] %></td>
+        <td><%= @datos3['locations']['ViñadelMar,Chile']['currentConditions']['humidity'] %></td>
+        <td><%= @datos3['locations']['ViñadelMar,Chile']['currentConditions']['wdir'] %></td>
+      </tr>
+      <tr>
+        <% @datos4 = HTTParty.get "https://visual-crossing-weather.p.rapidapi.com/forecast?aggregateHours=24&location=Rancagua%2CChile&contentType=json&unitGroup=us&shortColumnNames=0",
+        headers:{
+        "X-RapidAPI-Key" => '4e7b68c07amsh5bcab0e32768832p172629jsn875f54b8e1dc',
+        "X-RapidAPI-Host" => 'visual-crossing-weather.p.rapidapi.com'
+        } %>
+        <td><%= @datos4['locations']['Rancagua,Chile']['address'] %></td>
+        <td><%= @datos4['locations']['Rancagua,Chile']['currentConditions']['temp'] %></td>
+        <td><%= @datos4['locations']['Rancagua,Chile']['currentConditions']['humidity'] %></td>
+        <td><%= @datos4['locations']['Rancagua,Chile']['currentConditions']['wdir'] %></td>
+      </tr>
+      <tr>
+        <% @datos5 = HTTParty.get "https://visual-crossing-weather.p.rapidapi.com/forecast?aggregateHours=24&location=Concepcion%2CChile&contentType=json&unitGroup=us&shortColumnNames=0",
+        headers:{
+        "X-RapidAPI-Key" => '4e7b68c07amsh5bcab0e32768832p172629jsn875f54b8e1dc',
+        "X-RapidAPI-Host" => 'visual-crossing-weather.p.rapidapi.com'
+        } %>
+        <td><%= @datos5['locations']['Concepcion,Chile']['address'] %></td>
+        <td><%= @datos5['locations']['Concepcion,Chile']['currentConditions']['temp'] %></td>
+        <td><%= @datos5['locations']['Concepcion,Chile']['currentConditions']['humidity'] %></td>
+        <td><%= @datos5['locations']['Concepcion,Chile']['currentConditions']['wdir'] %></td>
+      </tr>
+      <tr>
+        <% @datos6 = HTTParty.get "https://visual-crossing-weather.p.rapidapi.com/forecast?aggregateHours=24&location=Magallanes%2CChile&contentType=json&unitGroup=us&shortColumnNames=0",
+        headers:{
+        "X-RapidAPI-Key" => '4e7b68c07amsh5bcab0e32768832p172629jsn875f54b8e1dc',
+        "X-RapidAPI-Host" => 'visual-crossing-weather.p.rapidapi.com'
+        } %>
+        <td><%= @datos6['locations']['Magallanes,Chile']['address'] %></td>
+        <td><%= @datos6['locations']['Magallanes,Chile']['currentConditions']['temp'] %></td>
+        <td><%= @datos6['locations']['Magallanes,Chile']['currentConditions']['humidity'] %></td>
+        <td><%= @datos6['locations']['Magallanes,Chile']['currentConditions']['wdir'] %></td>
+      </tr>
+  </tbody>
+</table>
 </div>
 
 
