--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -11,31 +11,53 @@
   </div>
 </div>
 
-<table class="table table-striped table-bordered table-hover">
-  <thead class="thead-dark">
-    <tr>
-      <th>Nombre</th>
-      <th>Imagen</th>
-      <th>Precio</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @productos.each do |producto| %>
-      <tr>
-        <td><%= producto.nombre %></td>
-        <td><%= image_tag producto.imagen, width: 100 if producto.imagen.attached? %></td>
-        <td> $ <%= producto.precio %></td>
-        <td><%= link_to 'Show', producto,  class:"btn btn-dark" %></td>
-        <%# <td><%= link_to 'Edit', edit_producto_path(producto) %>
-        <%# <td><%= link_to 'Destroy', producto, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<br/>
+<% if current_usuario %>
+  <% if current_usuario.role == "moderador" %>
+    <%= link_to 'Nuevo Producto', new_producto_path, class:"btn btn-dark" %>
+  <% end %>
+<% end %>
+<br/>
 
-<br>
+<div class="container-sm">
+  <% @productos.each do |producto| %>
+        <div class="card">
+          <%= image_tag producto.imagen, width: 100 if producto.imagen.attached? %>
+          <br/>
+          <h2><%= producto.nombre %></h2>
+          <br/>
+          <h3>$<%= producto.precio %></h3>
+          <br/>
+          <%= link_to 'Show', producto,  class:"btn btn-dark" %>
+          <br/>
+          <% if producto.stock_actual > 0 %>
+          <%= button_to "Anadir al carro", carro_items_path(:producto_id => producto.id), class:"btn btn-dark"%>
+          <% else%>
+            <h4>Fuera de Stock</h4>
+          <% end %>
+        </div>
+  <% end %>
+</div>
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
 
 <%# <%= link_to 'New Producto', new_producto_path, class:"btn btn-dark" %>
 
