--- a/app/views/productos/new.html.erb
+++ b/app/views/productos/new.html.erb
@@ -1,5 +1,4 @@
-<%# <h1>New Producto</h1>
+<h1>Nuevo Producto</h1>
 <br/>
 <%= render 'form', producto: @producto %>
-<%# <br/>
-<%= link_to 'Back', productos_path, class:"btn btn-dark" %>
+<br/>
