--- a/app/views/usuarios/registrations/edit.html.erb
+++ b/app/views/usuarios/registrations/edit.html.erb
@@ -60,4 +60,4 @@
 
 <%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "Seguro?" }, method: :delete %>
 
-<%= link_to "Back", :back , class:"btn btn-dark"%>
+<%= link_to "Volver", :back , class:"btn btn-dark"%>
